feat: only 30 places allowed to add

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,7 +144,7 @@
     <string name="channel_name">My stalkers are curious</string>
     <string name="channel_description">Channel for notifications about arrivals and departures.</string>
     <string name="location_off">Location is off.</string>
-    <string name="only_100">Only 100 places allowed</string>
+    <string name="only_30">Only 30 places allowed. Delete one to add one new.</string>
     <string name="one_contact">Add at least one contact first</string>
     <string name="one_place">Add at least one place first!</string>
 
